--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.4",
     "activedirectory2": "^2.2.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "ldapjs": "^3.0.7",
     "typescript": "^5.5.4"
