--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
+  "name": "api-ldap",
+  "version": "1.0.0",
+  "description": "The project authenticates the user in LDAP-AD.",
+  "main": "src/index.ts",
+  "scripts": {
+    "start": "tsx src/index.ts",
+    "build": "tsc",
+    "dev": "tsx watch src/index.ts"
+  },
   "dependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^22.5.4",
     "activedirectory2": "^2.2.0",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.0",
     "ldapjs": "^3.0.7",
+    "tsx": "^4.19.1",
     "typescript": "^5.5.4"
   },
   "devDependencies": {
     "@types/activedirectory2": "^1.2.6",
-    "@types/ldapjs": "^3.0.6"
+    "@types/express": "^4.17.17",
+    "@types/ldapjs": "^3.0.6",
+    "@types/node": "^18.17.19"
   }
 }
